# ocaml-sunnyhash

./: .travis.yml  README.md  dune-project  flake.nix  sunnyhash.opam
lib/: dune  sunnyhash.ml  sunnyhash.mli
test/: dune  test_sunnyhash.ml
